--- a/src/about.html
+++ b/src/about.html
@@ -45,9 +45,23 @@ build a digital and advance world.</p>
     </div>
   </div>
 </main>
-<aside class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9">
-  <div class="">
-      <img src="./asset/vision.png" alt="" class="w-[50%]">
+<aside class="bg-lightGreen">
+  <div class="flex py-6 w-[80%] mx-auto items-center">
+    <div>
+        <img src="./asset/vision.png" alt="" class="w-[80%]">
+    </div>
+      <div class="text-center md:text-left md:w-[50%] ">
+    <h1 class="text-[#005C54] font-bold text-3xl mb-2">OUR VISION</h1>
+    <p class="text-black text-xl md:max-w-sm">The tech community envisions a 
+world where technology is accessible
+and utilized to its fullest potential, 
+providing solutions to global challenges 
+while promoting diversity, collaboration, 
+and ethical practices. Together, we strive 
+towards creating a more connected, 
+informed, and sustainable society 
+through the power of technology</p>
+    </div>
     </div>
 </aside>
 </body>
