feat: add mobile styles

--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,7 @@
 </head>
 <body class="">
 <header style="background-image: url(/src/asset/about-bg.png);"  class="bg-cover bg-no-repeat bg-center h-[100vh]">
-<nav class="bg-transparent py-5 w-full md:w-[80%] z-10 mx-auto flex justify-between items-center">
+<nav class="bg-transparent py-5 w-full md:w-[80%] z-10 mx-auto flex justify-between items-center flex-wrap">
    <div>
     <img src="/src/asset/THOU.png" alt="">
    </div>
@@ -32,9 +32,9 @@ creativity, in university of Osun state. .</p>
 </div>
 </header>
 <main >
-  <div class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9">
+  <div class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9 mb-8 space-y-6 md:space-y-0">
     <div class="text-center md:text-left md:w-[50%]">
-    <h1 class="text-[#005C54] font-bold text-3xl mb-2">OUR MISSION</h1>
+    <h1 class="text-darkGreen font-bold text-3xl mb-2">OUR MISSION</h1>
     <p class="text-black text-xl md:max-w-sm">Our mission is to bring together 
 student of like minds with a passion 
 driven mind to join hands together to 
@@ -45,13 +45,13 @@ build a digital and advance world.</p>
     </div>
   </div>
 </main>
-<aside class="bg-lightGreen">
-  <div class="flex py-6 w-[80%] mx-auto items-center">
+<aside class="bg-lightGreen mt-14">
+  <div class="flex py-8 w-[80%] mx-auto items-center flex-col md:flex-row space-y-6 md:space-y-0">
     <div>
-        <img src="./asset/vision.png" alt="" class="w-[80%]">
+        <img src="./asset/vision.png" alt="" class="md:w-[80%]">
     </div>
       <div class="text-center md:text-left md:w-[50%] ">
-    <h1 class="text-[#005C54] font-bold text-3xl mb-2">OUR VISION</h1>
+    <h1 class="text-darkGreen font-bold text-3xl mb-2">OUR VISION</h1>
     <p class="text-black text-xl md:max-w-sm">The tech community envisions a 
 world where technology is accessible
 and utilized to its fullest potential, 
@@ -64,5 +64,8 @@ through the power of technology</p>
     </div>
     </div>
 </aside>
+<article>
+  <h3>Meet Our Leaders</h3>
+</article>
 </body>
 </html>
