--- a/src/about.html
+++ b/src/about.html
@@ -46,7 +46,7 @@ build a digital and advance world.</p>
   </div>
 </main>
 <aside class="bg-lightGreen mt-14">
-  <div class="flex py-8 w-[80%] mx-auto items-center flex-col md:flex-row space-y-6 md:space-y-0">
+  <div class="flex py-8 w-[80%] mx-auto items-center flex-col-reverse md:flex-row space-y-6 md:space-y-0">
     <div>
         <img src="./asset/vision.png" alt="" class="md:w-[80%]">
     </div>
@@ -64,8 +64,16 @@ through the power of technology</p>
     </div>
     </div>
 </aside>
-<article>
-  <h3>Meet Our Leaders</h3>
+<article class="my-12">
+<div class="w-[50%] mx-auto text-center md:max-w-xl">
+    <h3 class="text-darkGreen font-bold text-3xl mb-2">Meet Our Leaders</h3>
+  <p class="text-[20px] text-black">Meet our mentors in the tech field representing Nigeria association of computer student NACOS</p>
+</div>
+<div class="flex flex-col md:flex-row md:justify-between">
+<div>
+  <img src="./asset/leader-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[20%]">
+</div>
+</div>
 </article>
 </body>
 </html>
