feat: add teams section

--- a/src/about.html
+++ b/src/about.html
@@ -65,15 +65,74 @@ through the power of technology</p>
     </div>
 </aside>
 <article class="my-12">
-<div class="w-[50%] mx-auto text-center md:max-w-xl">
+<div class="md:w-[50%] mx-auto text-center md:max-w-xl">
     <h3 class="text-darkGreen font-bold text-3xl mb-2">Meet Our Leaders</h3>
   <p class="text-[20px] text-black">Meet our mentors in the tech field representing Nigeria association of computer student NACOS</p>
 </div>
-<div class="flex flex-col md:flex-row md:justify-between">
-<div>
-  <img src="./asset/leader-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[20%]">
+<div class="flex flex-col md:flex-row md:justify-between items-center md:w-[80%] mx-auto mt-6 space-y-6 md:space-y-0">
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[40%] p-1">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">Dr Ajadi Richard</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
 </div>
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-2.png" alt="" class="rounded-full border-2 border-[#00A396] w-[40%] p-1">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">Dr Ajadi Richard</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-3.png" alt="" class="rounded-full border-2 border-[#00A396] w-[40%] p-1">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">Dr Ajadi Richard</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-4.png" alt="" class="rounded-full border-2 border-[#00A396] w-[40%] p-1">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">Dr Ajadi Richard</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+
 </div>
 </article>
+
+<section class="bg-lightGreen">
+  <div class="md:w-[80%] mx-auto py-4">
+    <div class="md:w-[50%] mx-auto text-center md:max-w-xl">
+    <h3 class="text-darkGreen font-bold text-3xl mb-2">Our Team</h3>
+  <p class="text-[20px] text-black">Our team is made up of talented individuals from diverse backgrounds, all united by a shared vision.</p>
+</div>
+<div class="flex flex-col md:flex-row md:justify-between items-center mt-6 space-y-6 md:space-y-0 md:w-[90%] mx-auto">
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-2.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+<div class="flex flex-col justify-center space-y-2 items-center">
+  <img src="./asset/leader-3.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+ <div class="text-center">
+   <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
+  <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
+ </div>
+</div>
+
+</div>
+  </div>
+</section>
 </body>
 </html>
