--- a/src/about.html
+++ b/src/about.html
@@ -100,6 +100,9 @@ through the power of technology</p>
 </div>
 
 </div>
+<div>
+  <a href="teams.html"></a>
+</div>
 </article>
 
 <section class="bg-lightGreen">
@@ -110,21 +113,21 @@ through the power of technology</p>
 </div>
 <div class="flex flex-col md:flex-row md:justify-between items-center mt-6 space-y-6 md:space-y-0 md:w-[90%] mx-auto">
 <div class="flex flex-col justify-center space-y-2 items-center">
-  <img src="./asset/leader-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+  <img src="./asset/team-1.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
  <div class="text-center">
    <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
   <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
  </div>
 </div>
 <div class="flex flex-col justify-center space-y-2 items-center">
-  <img src="./asset/leader-2.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+  <img src="./asset/team-2.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
  <div class="text-center">
    <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
   <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
  </div>
 </div>
 <div class="flex flex-col justify-center space-y-2 items-center">
-  <img src="./asset/leader-3.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
+  <img src="./asset/tean-3.png" alt="" class="rounded-full border-2 border-[#00A396] w-[60%] p-2">
  <div class="text-center">
    <h4 class="text-xl font-semibold text-darkGreen">codeBox</h4>
   <p class="text-[#555353] font-semibold text-sm">Uniosun Alumni</p>
