--- a/src/about.html
+++ b/src/about.html
@@ -31,8 +31,8 @@ innovation with the means of technology and
 creativity, in university of Osun state. .</p>
 </div>
 </header>
-<main >
-  <div class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9 mb-8 space-y-6 md:space-y-0">
+<main  class="bg-lightBg">
+  <div class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto pt-10 md:space-x-9 pb-20 space-y-6 md:space-y-0">
     <div class="text-center md:text-left md:w-[50%]">
     <h1 class="text-darkGreen font-bold text-3xl mb-2">OUR MISSION</h1>
     <p class="text-black text-xl md:max-w-sm">Our mission is to bring together 
@@ -45,7 +45,7 @@ build a digital and advance world.</p>
     </div>
   </div>
 </main>
-<aside class="bg-lightGreen mt-14">
+<aside class="bg-lightGreen ">
   <div class="flex py-8 w-[80%] mx-auto items-center flex-col-reverse md:flex-row space-y-6 md:space-y-0">
     <div>
         <img src="./asset/vision.png" alt="" class="md:w-[80%]">
@@ -64,7 +64,7 @@ through the power of technology</p>
     </div>
     </div>
 </aside>
-<article class="my-12">
+<article class="bg-lightBg py-12">
 <div class="md:w-[50%] mx-auto text-center md:max-w-xl">
     <h3 class="text-darkGreen font-bold text-3xl mb-2">Meet Our Leaders</h3>
   <p class="text-[20px] text-black">Meet our mentors in the tech field representing Nigeria association of computer student NACOS</p>
