--- a/src/about.html
+++ b/src/about.html
@@ -137,5 +137,16 @@ through the power of technology</p>
 </div>
   </div>
 </section>
+<section class="bg-lightBg py-14">
+  <div class="md:w-[50%] mx-auto text-center md:max-w-xl">
+    <h3 class="text-darkGreen font-bold text-3xl mb-2">STUDENTS FAQ</h3>
+  <p class="text-[20px] text-black">Curious about something?, check the frequently asked questions & if you need more info reach out</p>
+</div>
+<div class="md:w-[70%] bg-white rounded-md p-4">
+<div class="flex justify-between items-center">
+<h4></h4>
+</div>
+</div>
+</section>
 </body>
 </html>
