--- a/src/about.html
+++ b/src/about.html
@@ -138,13 +138,55 @@ through the power of technology</p>
   </div>
 </section>
 <section class="bg-lightBg py-14">
-  <div class="md:w-[50%] mx-auto text-center md:max-w-xl">
+  <div class="md:w-[40%] mx-auto text-center md:max-w-xl">
     <h3 class="text-darkGreen font-bold text-3xl mb-2">STUDENTS FAQ</h3>
   <p class="text-[20px] text-black">Curious about something?, check the frequently asked questions & if you need more info reach out</p>
 </div>
-<div class="md:w-[70%] bg-white rounded-md p-4">
-<div class="flex justify-between items-center">
-<h4></h4>
+<div class="md:w-[50%] bg-white rounded-md p-4 mx-auto font-inter my-6">
+<div class="flex justify-between items-center mb-4">
+<div class="flex gap-5
+items-center">
+  <h4 class="text-bold text-[20px] text-[#0000004D]">01</h4>
+<p class="text-xl font-semibold leading-6
+">Does this site only offer past questions?</p>
+</div>
+<button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">+</button>
+</div>
+<div class="flex justify-between items-center mb-4">
+<div class="flex gap-5
+items-center">
+  <h4 class="text-bold text-[20px] text-[#0000004D]">02</h4>
+<p class="text-xl font-semibold leading-6
+">Does this site only available to UniOsun students?</p>
+</div>
+<button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">+</button>
+</div>
+<div class="flex justify-between items-center mb-4">
+<div class="flex gap-5
+items-center">
+  <h4 class="text-bold text-[20px] text-[#0000004D]">03</h4>
+<p class="text-xl font-semibold leading-6
+">How many years question does it cover?</p>
+</div>
+<button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">+</button>
+</div>
+<div class="flex justify-between items-center mb-4">
+<div class="flex gap-5
+items-center">
+  <h4 class="text-bold text-[20px] text-[#0000004D]">04</h4>
+<p class="text-xl font-semibold leading-6
+">Is there a timetable to studying?</p>
+</div>
+<button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">+</button>
+</div>
+<div class="flex justify-between items-center mb-4">
+<div class="flex gap-5
+items-center">
+  <h4 class="text-bold text-[20px] text-[#0000004D]">04</h4>
+<p class="text-xl font-semibold leading-6
+">Was this site created by our students?</p>
+</div>
+<button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">+</button>
 </div>
 </div>
 </section>
