--- a/src/service.html
+++ b/src/service.html
@@ -93,6 +93,63 @@ creativity, in university of Osun state. .</p>
 
       
     </div>
+          <div class="md:w-[50%] bg-white rounded-md p-4 mx-auto font-inter my-6 mt-14">
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-5 items-center">
+            <h4 class="text-bold text-[20px] text-[#0000004D]">01</h4>
+            <p class="text-xl font-semibold leading-6">
+              Does this site only offer past questions?
+            </p>
+          </div>
+          <button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">
+            +
+          </button>
+        </div>
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-5 items-center">
+            <h4 class="text-bold text-[20px] text-[#0000004D]">02</h4>
+            <p class="text-xl font-semibold leading-6">
+              Does this site only available to UniOsun students?
+            </p>
+          </div>
+          <button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">
+            +
+          </button>
+        </div>
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-5 items-center">
+            <h4 class="text-bold text-[20px] text-[#0000004D]">03</h4>
+            <p class="text-xl font-semibold leading-6">
+              How many years question does it cover?
+            </p>
+          </div>
+          <button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">
+            +
+          </button>
+        </div>
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-5 items-center">
+            <h4 class="text-bold text-[20px] text-[#0000004D]">04</h4>
+            <p class="text-xl font-semibold leading-6">
+              Is there a timetable to studying?
+            </p>
+          </div>
+          <button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">
+            +
+          </button>
+        </div>
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex gap-5 items-center">
+            <h4 class="text-bold text-[20px] text-[#0000004D]">04</h4>
+            <p class="text-xl font-semibold leading-6">
+              Was this site created by our students?
+            </p>
+          </div>
+          <button class="px-2 py-1 rounded-full bg-[#D9D9D966] text-center">
+            +
+          </button>
+        </div>
+      </div>
 </div>
 
 <footer class="bg-green-800 px-7 py-20 text-white">
