--- a/src/service.html
+++ b/src/service.html
@@ -32,7 +32,7 @@ creativity, in university of Osun state. .</p>
 </div>
 </header>
 
-<div class="bg-green-200 px-7 py-20">
+<div class="bg-lightGreen px-7 py-20">
     <div class="max-w-4xl mx-auto text-center ">
         <div>
             <h1 class="font-bold text-3xl text-green-700 ">Services</h1>
@@ -152,57 +152,62 @@ creativity, in university of Osun state. .</p>
       </div>
 </div>
 
-<footer class="bg-green-800 px-7 py-20 text-white">
-    <div class="mb-4">
-      <img src="./asset/THOU (1).png" alt="">
-    </div>
-    <div class="grid grid-cols-3 mt-10">
-      <div>
-        <div class="mb-4">
-          <h1 class="text-xl font-bold">Pages</h1>
-        </div>
-        <ul class="space-y-4">
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Contact Us</a></li>
-        </ul>
-
+<footer class="bg-green-800 px-7 py-20 text-white w-full overflow-hidden">
+  <div class="mb-4">
+    <img src="./asset/THOU (1).png" alt="" />
+  </div>
+  <div class="grid grid-cols-3 mt-10">
+    <div>
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Pages</h1>
       </div>
-
-      <div>
-        <div class="mb-4">
-          <h1 class="text-xl font-bold">Social Handles</h1>
-        </div>
-        <ul class="space-y-4">
-          <li><a href="">Facebook</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Telegram</a></li>
-        </ul>
-
-      </div>
-
-      <div class="">
-        <div class="mb-4">
-          <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
-        </div>
-        <div class="mb-4">
-          <span class="text-md text-right">
-            Don't miss out an update sign up with your mail to get the tech update from us.
-          </span>
-        </div>
-        <div class="flex mt-8">
-          <input class="grow" type="text" name="" id="">
-          <button class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg">Subscribe</button>
-        </div>
-       
-
-      </div>
-
+      <ul class="space-y-4 font-light ">
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Service</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
     </div>
 
-    
-  </footer>
+    <div>
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Social Handles</h1>
+      </div>
+      <ul class="space-y-4 font-light">
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Telegram</a></li>
+      </ul>
+    </div>
+
+    <div class="">
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
+      </div>
+      <div class="mb-4">
+        <span class="text-md text-right font-light">
+          Don't miss out an update sign up with your mail to get the tech
+          update from us.
+        </span>
+      </div>
+      <div class="hidden  md:flex flex-col md:flex-row mt-8 w-full">
+        <input class="grow" type="text" name="" id="" />
+        <button
+          class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+        >
+          Subscribe
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="mt-3 md:hidden">
+    <input class="w-full" type="text" name="" id="" />
+    <button
+      class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+    >
+      Subscribe
+    </button>
+</footer>
 </body>
 </html>
