--- a/src/index.html
+++ b/src/index.html
@@ -21,28 +21,62 @@
 
 <body class="bg-white ">
   <!-- header -->
-  <nav class=" py-5 w-full md:w-[80%] px-7 z-10 mx-auto flex justify-between items-center">
-    <div>
-     <img src="/src/asset/THOU.png" alt="">
+  <nav class="bg-green-100 md:px-10   py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
+    <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto ">
+     <h1 class="text-3xl font-bold text-green-700">ACASPEDIA</h1>
+      <button data-collapse-toggle="navbar-default" type="button"
+        class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"></path>
+        </svg>
+      </button>
+      <div class="hidden w-full md:block md:w-auto " id="navbar-default">
+        <ul
+          class="justify-center items-center font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
+          <li>
+            <a href="./index.html"
+              class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              aria-current="page">Home</a>
+          </li>
+          <li>
+            <a href="./about.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+          </li>
+          <li>
+            <a href="./service.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+          </li>
+          <li>
+            <a href="./blog.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
+          </li>
+          <li>
+            <a href="./contact.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+          </li>
+          <li>
+            <a href="./courses.html">
+              <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <ul class="flex md:space-x-8 font-bold font-inter">
-     <li><a href="index.html" class="text-links">Home</a></li>
-     <li><a href="about.html" class="text-links">about</a></li>
-     <li><a href="service.html" class="text-links">Services</a></li>
-     <li><a href="blog.html" class="text-links">Blog</a></li>
-     <li><a href="contact.html" class="text-links">Contact</a></li>
-     <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
-    </ul>
-   </nav>
+  </nav>
 
 
   <!-- /header -->
 
   <!-- hero -->
-  <div class="md:px-10 bg-green-100  pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2  ">
+  <div class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2  ">
     <div class="md:px-10 py-9">
       <div>
-        <h2 class="md:text-9xl space-x-5 text-4xl font-semibold">Welcome to THOU </h2>
+        <h2 class="md:text-9xl space-x-5 text-4xl font-semibold">Welcome to ACASPEDIA</h2>
       </div>
       <div class="my-5">
         <span class="leading-7 text-md">
@@ -208,8 +242,8 @@
       <h1 class="text-2xl font-bold text-green-600">BLOG</h1>
       <span class="text-xl">we give updates on what is going on within the school</span>
     </div>
-    <div class="my-6 grid grid-cols-3 gap-5">
-      <div class="bg-green-50 rounded-md p-2">
+    <div class="my-6 md:grid grid-cols-3 gap-5">
+      <div class="bg-green-50 rounded-md p-2 mb-4">
         <div>
           <img src="./asset/Rectangle 48.png" alt="">
         </div>
@@ -228,7 +262,7 @@
 
       </div>
 
-      <div class="bg-green-50 rounded-md p-2">
+      <div class="bg-green-50 rounded-md p-2  mb-4">
         <div>
           <img src="./asset/Rectangle 48 (2).png" alt="">
         </div>
@@ -247,7 +281,7 @@
 
       </div>
 
-      <div class="bg-green-50 rounded-md p-2">
+      <div class="bg-green-50 rounded-md p-2  mb-4">
         <div>
           <img src="./asset/Rectangle 48 (1).png" alt="">
         </div>
@@ -273,35 +307,33 @@
   </div>
 
 
-  <footer class="bg-green-800 px-7 py-20 text-white">
+  <footer class="bg-green-800 px-7 py-20 text-white w-full overflow-hidden">
     <div class="mb-4">
-      <img src="./asset/THOU (1).png" alt="">
+      <img src="./asset/THOU (1).png" alt="" />
     </div>
     <div class="grid grid-cols-3 mt-10">
       <div>
         <div class="mb-4">
           <h1 class="text-xl font-bold">Pages</h1>
         </div>
-        <ul class="space-y-4">
+        <ul class="space-y-4 font-light ">
           <li><a href="">Home</a></li>
           <li><a href="">About Us</a></li>
           <li><a href="">Service</a></li>
           <li><a href="">Contact Us</a></li>
         </ul>
-
       </div>
 
       <div>
         <div class="mb-4">
           <h1 class="text-xl font-bold">Social Handles</h1>
         </div>
-        <ul class="space-y-4">
+        <ul class="space-y-4 font-light">
           <li><a href="">Facebook</a></li>
           <li><a href="">Instagram</a></li>
           <li><a href="">Twitter</a></li>
           <li><a href="">Telegram</a></li>
         </ul>
-
       </div>
 
       <div class="">
@@ -309,23 +341,29 @@
           <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
         </div>
         <div class="mb-4">
-          <span class="text-md text-right">
-            Don't miss out an update sign up with your mail to get the tech update from us.
+          <span class="text-md text-right font-light">
+            Don't miss out an update sign up with your mail to get the tech
+            update from us.
           </span>
         </div>
-        <div class="flex mt-8">
-          <input class="grow" type="text" name="" id="">
-          <button class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg">Subscribe</button>
+        <div class="hidden  md:flex flex-col md:flex-row mt-8 w-full">
+          <input class="grow" type="text" name="" id="" />
+          <button
+            class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+          >
+            Subscribe
+          </button>
         </div>
-       
-
       </div>
-
     </div>
-
-    
+    <div class="mt-3 md:hidden">
+      <input class="w-full" type="text" name="" id="" />
+      <button
+        class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+      >
+        Subscribe
+      </button>
   </footer>
-  
 
 
 
