--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,12 @@
   <!-- header -->
   <nav class="bg-green-100 md:px-10   py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
     <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto ">
-     <h1 class="text-3xl font-bold text-green-700">ACASPEDIA</h1>
+      <div class="mb-4">
+        <a href="index.html">
+          <img src="./asset/logo1.png" alt="" />
+        </a>
+        
+      </div>
       <button data-collapse-toggle="navbar-default" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
         aria-controls="navbar-default" aria-expanded="false">
@@ -37,27 +42,27 @@
       </button>
       <div class="hidden w-full md:block md:w-auto " id="navbar-default">
         <ul
-          class="justify-center items-center font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
+          class="justify-center items-flex-start font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
           <li>
             <a href="./index.html"
-              class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
               aria-current="page">Home</a>
           </li>
           <li>
             <a href="./about.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
           </li>
           <li>
             <a href="./service.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
           </li>
           <li>
             <a href="./blog.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
           </li>
           <li>
             <a href="./contact.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
           <li>
             <a href="./courses.html">
@@ -74,9 +79,9 @@
 
   <!-- hero -->
   <div class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2  ">
-    <div class="md:px-10 py-9">
+    <div class="md:px-10 md:py-32 ">
       <div>
-        <h2 class="md:text-9xl space-x-5 text-4xl font-semibold">Welcome to ACASPEDIA</h2>
+        <h2 class="md:text-6xl space-x-5 text-4xl font-semibold">Welcome to ACASPEDIA</h2>
       </div>
       <div class="my-5">
         <span class="leading-7 text-md">
@@ -308,11 +313,11 @@
 
 
   <footer class="bg-green-800 px-7 py-20 text-white w-full overflow-hidden">
-    <div class="mb-4">
-      <img src="./asset/THOU (1).png" alt="" />
-    </div>
-    <div class="grid grid-cols-3 mt-10">
-      <div>
+    <a href="index.html">
+      <img src="./asset/logo.png" alt="" />
+    </a>
+    <div class="grid md:grid-cols-3 mt-10">
+      <div class="mb-10">
         <div class="mb-4">
           <h1 class="text-xl font-bold">Pages</h1>
         </div>
@@ -324,7 +329,7 @@
         </ul>
       </div>
 
-      <div>
+      <div class="mb-10">
         <div class="mb-4">
           <h1 class="text-xl font-bold">Social Handles</h1>
         </div>
@@ -336,7 +341,7 @@
         </ul>
       </div>
 
-      <div class="">
+      <div class="last">
         <div class="mb-4">
           <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
         </div>
@@ -357,11 +362,11 @@
       </div>
     </div>
     <div class="mt-3 md:hidden">
-      <input class="w-full" type="text" name="" id="" />
+      <input class="max-w-md" type="text" name="" id="" />
       <button
-        class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+        class="text-sm p-2.5 bg-green-600 rounded-tr-lg rounded-br-lg"
       >
-        Subscribe
+      Subscribe
       </button>
   </footer>
 
