--- a/src/about.html
+++ b/src/about.html
@@ -15,8 +15,9 @@
       class="bg-cover bg-no-repeat bg-center lg:h-[100vh]"
     >
     <nav class="bg-transparent md:px-10   py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
-      <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto ">
-       <h1 class="text-3xl font-bold text-white">ACASPEDIA</h1>
+      <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto "><a href="index.html">
+        <img src="./asset/logo.png" alt="" />
+      </a>
         <button data-collapse-toggle="navbar-default" type="button"
           class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
           aria-controls="navbar-default" aria-expanded="false">
@@ -30,27 +31,32 @@
         </button>
         <div class="hidden w-full md:block md:w-auto " id="navbar-default">
           <ul
-            class="justify-center items-center font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
+            class="justify-center items-flex-start font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
             <li>
               <a href="./index.html"
-                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+                hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 aria-current="page">Home</a>
             </li>
             <li>
               <a href="./about.html"
-                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
             </li>
             <li>
               <a href="./service.html"
-                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
             </li>
             <li>
               <a href="./blog.html"
-                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
             </li>
             <li>
               <a href="./contact.html"
-                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
               <a href="./courses.html">
@@ -293,10 +299,12 @@
 
     <footer class="bg-green-800 px-7 py-20 text-white w-full overflow-hidden">
       <div class="mb-4">
-        <img src="./asset/THOU (1).png" alt="" />
+        <a href="index.html">
+          <img src="./asset/logo.png" alt="" />
+        </a>
       </div>
-      <div class="grid grid-cols-3 mt-10">
-        <div>
+      <div class="grid md:grid-cols-3 mt-10">
+        <div class="mb-10">
           <div class="mb-4">
             <h1 class="text-xl font-bold">Pages</h1>
           </div>
@@ -307,8 +315,8 @@
             <li><a href="">Contact Us</a></li>
           </ul>
         </div>
-
-        <div>
+  
+        <div class="mb-10">
           <div class="mb-4">
             <h1 class="text-xl font-bold">Social Handles</h1>
           </div>
@@ -319,8 +327,8 @@
             <li><a href="">Telegram</a></li>
           </ul>
         </div>
-
-        <div class="">
+  
+        <div class="last">
           <div class="mb-4">
             <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
           </div>
@@ -341,12 +349,25 @@
         </div>
       </div>
       <div class="mt-3 md:hidden">
-        <input class="w-full" type="text" name="" id="" />
+        <input class="max-w-md" type="text" name="" id="" />
         <button
-          class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+          class="text-sm p-2.5 bg-green-600 rounded-tr-lg rounded-br-lg"
         >
-          Subscribe
+        Subscribe
         </button>
     </footer>
+
+     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script> -->
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+  <!-- CUSTOM JS  -->
+  <script>
+    AOS.init({ duration: 2000 });
+  </script>
+
   </body>
 </html>
