--- a/src/blog.html
+++ b/src/blog.html
@@ -10,23 +10,64 @@
     <title>Blog</title>
 </head>
 <body class="bg-gray-100 ">
-<header   class="bg-gray-100 bg-cover bg-no-repeat bg-center h-[100vh]">
-<nav class="bg-transparent py-5 w-full md:w-[80%] z-10 mx-auto flex justify-between items-center">
-   <div>
-    <img src="/src/asset/THOU.png" alt="">
-   </div>
-   <ul class="flex md:space-x-8 font-bold font-inter">
-    <li><a href="index.html" class="text-links">Home</a></li>
-    <li><a href="about.html" class="text-links">about</a></li>
-    <li><a href="service.html" class="text-links">Services</a></li>
-    <li><a href="blog.html" class="text-links">Blog</a></li>
-    <li><a href="contact.html" class="text-links">Contact</a></li>
-    <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
-   </ul>
-  </nav>
-<div class="w-[50%] mx-auto mt-[15%] text-center font-montserrat">
-  <h1 class="text-5xl text-black mb-6 font-bold">Blog<span class="text-[#00CCBB]">Page</span>  </h1>
-  <p class=" text-[25px] font-normal">Subscribe to learn more about your courses and updates.</p>
+<header style="background-image: url(./asset/blog-bg1.png);" class="bg-gray-100 bg-cover bg-no-repeat bg-center h-[100vh]">
+  <nav class="bg-transparent md:px-10   py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
+      <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto ">
+        <a href="index.html">
+          <img src="./asset/logo.png" alt="" />
+        </a>
+        <button data-collapse-toggle="navbar-default" type="button"
+          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          aria-controls="navbar-default" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
+        <div class="hidden w-full md:block md:w-auto " id="navbar-default">
+          <ul
+            class="justify-center items-flex-start font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
+            <li>
+              <a href="./index.html"
+                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+                hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                aria-current="page">Home</a>
+            </li>
+            <li>
+              <a href="./about.html"
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+            </li>
+            <li>
+              <a href="./service.html"
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+            </li>
+            <li>
+              <a href="./blog.html"
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
+            </li>
+            <li>
+              <a href="./contact.html"
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100
+              hover:text-gray-900 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+            </li>
+            <li>
+              <a href="./courses.html">
+                <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+<div class="lg:w-[50%] px-4 mx-auto mt-[15%] text-center font-montserrat">
+  <h1 class="text-5xl text-white mb-6 font-bold">Blog<span class="text-[#00CCBB]">Page</span>  </h1>
+  <p class="md:text-[25px] text-xl font-normal text-gray-200">Subscribe to learn more about your courses and updates.</p>
   <div class="flex mt-8">
     <input class="grow outline-none border-green-400  rounded-md" type="text">
     <button class="text-sm px-8 border-0 text-white bg-green-700 rounded-tr-lg rounded-br-lg">Subscribe</button>
@@ -36,7 +77,7 @@
 <main class="mb-32">
   <div class="flex justify-between font-montserrat items-center w-[90%] mx-auto py-8">
   <div class="py-2 border-b-2 w-full">
-    <ul class="flex gap-7 text-sm  ">
+    <ul class="md:flex gap-7 md:text-sm text-xs hidden ">
         <li>View all</li>
         <li>Students</li>
         <li>Freshers</li>
@@ -49,7 +90,7 @@
   </div>
    
   </div>
-  <div class=" md:w-[90%] mx-auto grid gap-4 grid-cols-3 mb-20">
+  <div class=" md:w-[90%] mx-auto px-9 grid gap-4 md:grid-cols-3 mb-20 ">
     <div class="my-4 mb-3 ">
      <div>
       <img src="./asset/Rectangle 52.png" alt="">
@@ -104,6 +145,24 @@
       </div>
      </div>
 
+     <div class="my-4 mb-3 ">
+      <div>
+       <img src="./asset/Rectangle 52.png" alt="">
+      </div>
+      <div class="my-4">
+       <h2 class="text-lg font-bold underline">What do we students do with our free time?</h2>
+      </div>
+      <div>
+       <span class="text-sm text-gray-600">When we are free, we engage ourselves in creating new ideas for
+         our departments, school or business as a whole. This is normally
+         a fun period because we network with fellow...</span>
+      </div>
+      <div class="mt-2">
+       <span class="italic"><a href="">Read Post</a></span>
+       <img class="inline" src="./asset/Vector.png" alt="">
+      </div>
+     </div>
+
     
 
   </div>
@@ -117,57 +176,76 @@
 
 </div>
 
-<footer class="bg-green-800 px-7 py-20 text-white">
+<footer class="bg-green-800 px-7 py-20 text-white w-full overflow-hidden">
   <div class="mb-4">
-    <img src="./asset/THOU (1).png" alt="">
+    <a href="index.html">
+      <img src="./asset/logo.png" alt="" />
+    </a>
   </div>
-  <div class="grid grid-cols-3 mt-10">
-    <div>
+  <div class="grid md:grid-cols-3 mt-10">
+    <div class="mb-10">
       <div class="mb-4">
         <h1 class="text-xl font-bold">Pages</h1>
       </div>
-      <ul class="space-y-4">
+      <ul class="space-y-4 font-light ">
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
         <li><a href="">Service</a></li>
         <li><a href="">Contact Us</a></li>
       </ul>
-
     </div>
 
-    <div>
+    <div class="mb-10">
       <div class="mb-4">
         <h1 class="text-xl font-bold">Social Handles</h1>
       </div>
-      <ul class="space-y-4">
+      <ul class="space-y-4 font-light">
         <li><a href="">Facebook</a></li>
         <li><a href="">Instagram</a></li>
         <li><a href="">Twitter</a></li>
         <li><a href="">Telegram</a></li>
       </ul>
-
     </div>
 
-    <div class="">
+    <div class="last">
       <div class="mb-4">
         <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
       </div>
       <div class="mb-4">
-        <span class="text-md text-right">
-          Don't miss out an update sign up with your mail to get the tech update from us.
+        <span class="text-md text-right font-light">
+          Don't miss out an update sign up with your mail to get the tech
+          update from us.
         </span>
       </div>
-      <div class="flex mt-8">
-        <input class="grow" type="text" name="" id="">
-        <button class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg">Subscribe</button>
+      <div class="hidden  md:flex flex-col md:flex-row mt-8 w-full">
+        <input class="grow" type="text" name="" id="" />
+        <button
+          class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
+        >
+          Subscribe
+        </button>
       </div>
-     
-
     </div>
-
   </div>
-
-  
+  <div class="mt-3 md:hidden">
+    <input class="max-w-md" type="text" name="" id="" />
+    <button
+      class="text-sm p-2.5 bg-green-600 rounded-tr-lg rounded-br-lg"
+    >
+    Subscribe
+    </button>
 </footer>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script> -->
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <!-- CUSTOM JS  -->
+    <script>
+      AOS.init({ duration: 2000 });
+    </script>
 </body>
 </html>
